fix(planificationToCaptation): Remove Cursus director and find any roles in any order
